<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewEvent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_add">Add</string>
    <string name="action_new_event">New Event</string>
    <string name="hint_title">Title</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_my_location">My Location</string>

</resources>
