<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#FFFFFF"
            >
            <Spinner
                android:id="@+id/titleSpinner"
                android:layout_marginLeft="20dp"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="#FFFFFF">

            </Spinner>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:hint="@string/hint_title"
                android:inputType="text"
                android:imeOptions="actionDone"
                />

        </LinearLayout>

        <LinearLayout
            android:background="#FFFFFF"
            android:layout_marginTop="5dp"

            android:layout_width="match_parent"
            android:layout_height="60dp">

            <LinearLayout
                android:id="@+id/date_layout"
                android:clickable="true"
                android:layout_weight="3"
                android:layout_marginLeft="20dp"
                android:orientation="vertical"

                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/lbl_date"
                    android:textSize="18sp"
                    android:text="@string/lbl_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <!--<TextView-->
                <!--android:id="@+id/day_value"-->
                <!--android:textSize="24sp"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_below="@+id/lbl_date"-->
                <!--android:text="Mon"-->
                <!--/>-->
                <TextView
                    android:id="@+id/date_value"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sat 22 Sep"
                    />

            </LinearLayout>



            <RelativeLayout
                android:layout_weight="2"

                android:id="@+id/time_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"


                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/lbl_time"
                    android:textSize="18sp"
                    android:text="@string/lbl_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:paddingLeft="20dp"
                    android:id="@+id/time_value"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lbl_time"
                    android:text="2:00pm"
                    />


            </RelativeLayout>

        </LinearLayout>


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            >
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/lbl_location"
                />
            <TextView
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/lbl_my_location"
                />
            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:id="@+id/static_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />


        </LinearLayout>



    </LinearLayout>

</LinearLayout>